tests/ui/type-alias-impl-trait/type-alias-impl-trait-with-cycle-error-3.stderr
error: unconstrained opaque type
  --> $DIR/type-alias-impl-trait-with-cycle-error-3.rs:4:16
   |
LL | type Foo<'a> = impl Fn() -> Foo<'a>;
   |                ^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Foo` must be used in combination with a concrete type within the same crate

error: aborting due to 1 previous error

